Adds security for user and password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.activemq.broker-url=vm://localhost?broker.persistent=false&broker.useShutdownHook=false
+user=ENC(FILqp2ZU13FZo0zxIOzhPA==)
+password=ENC(RcRFiWEGmK9biLCloJ8965x+5C1IOBHk)
